# turtle_number_art

./: .gitignore  README.md  pyproject.toml
turtle_number_art/: main.py
